# simple_cpp

./: CMakeLists.txt  README.md  main.cpp
01_basic/: 01_memory_allocation_model.cpp  02_reference.cpp  03_01_encapsulution.cpp  03_02_constructor_destructor.cpp  03_03_this_pointer.cpp  03_04_friend.cpp  03_05_operator.cpp  README.md
01_basic/03_class/: README.md
01_basic/03_class/01_encapsulution/: 01_class_demo.cpp
01_basic/notes/: 03_02_constrector_destructor.md  03_03_this_pointer.md  03_04_friend.md  03_04_operator.md
02_address_book_manage/: README.md  address_manage_system.cpp
02_advance/: 01_template.cpp  01_template_array.cpp  01_template_array.hpp  02_stl_deque.cpp  02_stl_list.cpp  02_stl_map.cpp  02_stl_queue.cpp  02_stl_set.cpp  02_stl_stack.cpp  02_stl_string.cpp  02_stl_vector.cpp  03_function_object.cpp  04_algorithm.cpp  template.cpp
03_projects/03_01_address_book_manage/: address_manage_system.cpp
03_projects/03_02_employee_manage/: boss.cpp  boss.h  employee.cpp  employee.h  managementSystem.cpp  manager.cpp  manager.h  worker.h  workerManager.cpp  workerManager.h
